Fixed padding in title and logo, aligned vertically

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ p {
 
 .postcard {
 	background: white;
-	width: 400px;
-	height: 300px;
+	width: 450px;
+	height: 320px;
 	margin: auto;
 }
 
@@ -24,11 +24,14 @@ p {
 .postcard-header img {
 	width: 50px;
 	height: 50px;
+	padding: 15px;
 }
 
 .postcard-header h1 {
 	width: 90%;
 	margin: 0;
+	align-self: center;
+	padding: 10px;
 }
 
 .postcard-body {
@@ -39,14 +42,25 @@ p {
 	margin-top: 0;
 }
 
+.body-left {
+	align-items: center;
+}
+
 .body-left,
 .body-right {
 	padding: 10px;
 }
 
+.body-right {
+	width: 160%;
+}
+
 input {
+	width: 100%;
 	border: none;
 	border-bottom: 2px solid grey;
+	margin-bottom: 10px;
+	font-size: 14px;
 }
 
 .postcard-footer {
@@ -56,4 +70,5 @@ input {
 button {
 	background-color: darkgray;
 	padding: 10px;
+	margin-bottom: 10px;
 }
